Typo correction, eliminated delete of test Supporters.

--- a/app/views/supporters/new.html.erb
+++ b/app/views/supporters/new.html.erb
@@ -5,7 +5,7 @@
         <div id="introduction">
           <h2>This survey asks a lot of questions!</h2>
           <h4>If you don't feel like responding to any particular question or if it doesn't apply to you,
-          simply leave it blank. Required fields, which are related to your contact information, are indicate with an asterisk.</h4>
+          simply leave it blank. Required fields, which are related to your contact information, are indicated with an asterisk.</h4>
           <h4>There are five short sections to the survey. The entire process should take you less than ten minutes.
             If you have any question about any of this or would like to talk to someone in person, please contact
           Rick Eaton, SSP's Executive Director, at 916-488-6441.</h4>
