--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,11 +1,4 @@
 /*
-*= require modal
-*= require payment
-*= require registration
-*= require style
-*= require custom
-*= require active_admin
-*= require availability
-*= require survey
+*= require ssp_style
 */
 
