--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,4 +1,11 @@
 /*
 *= require ssp_style
+*= require payment
+*= require registration
+*= require style
+*= require custom
+*= require active_admin
+*= require availability
+*= require survey
 */
 
